# Coding-Interview-LLM-Trainer

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  docker-compose.yml  pyproject.toml
data/: golden_eval.jsonl  schema.md  seed_examples.jsonl
frontend/: app.py
src/coding_interview_trainer/: __init__.py  schemas.py
src/coding_interview_trainer/agent/: __init__.py  llm.py  service.py
src/coding_interview_trainer/api/: main.py
src/coding_interview_trainer/benchmarks/: benchmark_inference.py
src/coding_interview_trainer/eval/: evaluate_dataset.py  rules.py  run_baseline.py  validate_dataset.py
src/coding_interview_trainer/prompts/: __init__.py  templates.py
src/coding_interview_trainer/training/: data.py  train_qlora.py
tests/: test_api.py  test_dataset_validation.py  test_eval_and_benchmark.py  test_prompts.py  test_rules.py  test_run_baseline.py  test_schemas.py  test_training_data.py
